<?xml version="1.0"?>
<package format="3">
  <name>wheel_trajectory</name>
  <version>0.1.0</version>
  <description>Predict/measure-based wheel odometry trajectory publisher (Path in map frame).</description>

  <maintainer email="imhyeonwoo21@gmail.com">ihw</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
  </export>
</package>
